color contrast fix

--- a/Assets/style/styles.css
+++ b/Assets/style/styles.css
@@ -81,9 +81,9 @@
   width: 200px;
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
   font-size: 20px;
-  font-weight: bold;
+  font-weight: bolder;
   text-align: center;
-  background-color: skyblue;
+  background-color: #6670FF;
   color: white;
   text-decoration: none;
   padding: 12px 24px;
@@ -102,9 +102,9 @@
   font-size: 20px;
   margin-left: auto;
   margin-right: auto;
-  font-weight: bold;
+  font-weight: bolder;
   text-align: center;
-  background-color: skyblue !important;
+  background-color: #6670FF !important;
   color: white;
   text-decoration: none;
   padding: 12px 24px;
